# agentic-rca-mcp

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BENCHMARK.md  DECISIONS.md  Dockerfile  README.md  api.py  auth.py  config.py  docker-compose.yml  embeddings.py  html_generator.py  memory.py  model_status.py  pdf_generator.py  prompts.py  pyproject.toml  rca_agent.py  requirements.txt  sanitizer.py  schemas.py  server.py  utils.py  validation.py
agent/: __init__.py  orchestrator.py  tools.py
agentic_rca/: __init__.py  __main__.py
data/: past_rca_memory_sample_repaired.xlsx
docs/: Agentic_RCA_Web_UI_Guide.docx  auth0_setup.md  phase1_internal_build_notes.md  phase2_internal_build_notes.md  phase3_internal_build_notes.md  phase3_retrofit_internal_notes.md  phase4_internal_build_notes.md  phase5_internal_build_notes.md  phase6_internal_build_notes.md  rca_training_data_intake_notes.md  web_ui_guide.md
eval/: candidate_golden_incidents.jsonl  candidate_incidents.jsonl  convert_training_data.py  golden_set.jsonl  judge.py  judge_calibration_set.jsonl  raw_rca_training_data.json  repeated_memory_cases.jsonl  results.json  results.md  rubric.md  run_eval.py
examples/: sample_inputs.md  sample_rca_1.json  sample_rca_2.json  sample_rca_3.json  sample_rca_4.json  sample_rca_fault_tree_fixture.json  sample_rca_fishbone_fixture.json
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
methods/: __init__.py  base.py  fault_tree.py  fishbone.py  five_why.py
providers/: __init__.py  base.py  recovery.py  (+2 more)
(+68 files in other folders)
