[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rca-mcp"
version = "0.1.0"
description = "Open-model Agentic RCA MCP server"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "fastmcp",
  "instructor",
  "mcp",
  "ollama",
  "openai",
  "pydantic",
  "python-dotenv",
  "pytest",
  "reportlab",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["venv", "scratch", "outputs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# run_eval.py inserts the repo root on sys.path before importing flat modules.
"eval/run_eval.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = [
  "agent",
  "agentic_rca",
  "config",
  "html_generator",
  "methods",
  "pdf_generator",
  "prompts",
  "providers",
  "rca_agent",
  "sanitizer",
  "schemas",
  "server",
  "utils",
  "validation",
]
